# projektlabor

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  Engine.cpp  Engine.h  EngineHandler.cpp  EngineHandler.h  README.md  main.cpp  sorting-algos.cpp
data/: data.txt
